# cardano-wallet

./: default.nix  release.nix  stack.yaml
exe/wallet/jormungandr/: Main.hs
lib/core/: cardano-wallet-core.cabal
lib/core-integration/: cardano-wallet-core-integration.cabal
lib/core-integration/src/Test/Integration/: Faucet.hs
lib/core-integration/src/Test/Integration/Framework/: DSL.hs
lib/core-integration/src/Test/Integration/Scenario/API/: ByronWallets2.hs
lib/core/src/Cardano/: Wallet.hs
lib/core/src/Cardano/Byron/Codec/: Cbor.hs
lib/core/src/Cardano/Pool/: Metrics.hs
lib/core/src/Cardano/Pool/DB/: Sqlite.hs
lib/core/src/Cardano/Pool/DB/Sqlite/: TH.hs
lib/core/src/Cardano/Wallet/: Api.hs  DaedalusIPC.hs  Network.hs
lib/core/src/Cardano/Wallet/Api/: Server.hs  Types.hs
lib/core/src/Cardano/Wallet/DB/Sqlite/: Types.hs
lib/core/src/Cardano/Wallet/Primitive/: Model.hs  Types.hs
lib/core/src/Data/: Quantity.hs
lib/core/test/bench/db/: Main.hs
lib/core/test/unit/Cardano/: WalletSpec.hs
lib/core/test/unit/Cardano/Byron/Codec/: CborSpec.hs
lib/core/test/unit/Cardano/Pool/DB/: Arbitrary.hs
lib/core/test/unit/Cardano/Wallet/: DBSpec.hs
lib/core/test/unit/Cardano/Wallet/Api/: TypesSpec.hs
lib/http-bridge/src/Cardano/Wallet/HttpBridge/: Compatibility.hs  Network.hs
lib/http-bridge/test/bench/: Main.hs
lib/http-bridge/test/integration/Cardano/: WalletSpec.hs
lib/jormungandr/: cardano-wallet-jormungandr.cabal
lib/jormungandr/exe/: cardano-wallet-jormungandr.hs
lib/jormungandr/src/Cardano/Wallet/Jormungandr/: Binary.hs  Compatibility.hs  Network.hs
lib/jormungandr/test/integration/: Main.hs
lib/jormungandr/test/migration/: migration-test.hs
lib/launcher/: cardano-wallet-launcher.cabal
lib/launcher/src/Cardano/: Launcher.hs
lib/launcher/test/unit/Cardano/: LauncherSpec.hs
lib/shelley/: cardano-wallet-shelley.cabal
lib/shelley/exe/: cardano-wallet-shelley.hs
lib/shelley/src/Cardano/Wallet/: Shelley.hs
lib/shelley/src/Cardano/Wallet/Shelley/: Network.hs  Transaction.hs
nix/: daedalus-test.nix  jormungandr.nix  sources.json
nix/.stack.nix/: cardano-prelude.nix  cardano-shell.nix  cardano-wallet-core.nix  cardano-wallet-jormungandr.nix  default.nix
specifications/api/: swagger.yaml
(+14 files in other folders)
