name:                cardano-wallet-shelley
version:             2019.7.24
synopsis:            Wallet backend protocol-specific bits implemented using Shelley nodes
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-wallet
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2019 IOHK
license:             MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -Wall
      -Wcompat
      -fwarn-redundant-constraints
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      base
    , bytestring
    , either
    , fmt
    , async
    , warp
    , deepseq
    , cryptonite
    , cardano-ledger
    , cardano-crypto-wrapper
    , cardano-wallet-core
    , cardano-wallet-cli
    , cardano-wallet-launcher
    , text-class
    , contra-tracer
    , io-sim-classes
    , iohk-monitoring
    , network
    , network-mux
    , memory
    , cardano-binary
    , optparse-applicative
    , ouroboros-consensus
    , ouroboros-network
    , serialise
    , stm
    , text
    , time
    , transformers
    , typed-protocols
    , typed-protocols-cbor
  hs-source-dirs:
      src
  exposed-modules:
      Cardano.Wallet.Shelley.Network
      Cardano.Wallet.Shelley.Transaction
      Cardano.Wallet.Shelley

executable cardano-wallet-shelley
  default-language:
      Haskell2010
  default-extensions:
      NoImplicitPrelude
      OverloadedStrings
  ghc-options:
      -threaded -rtsopts
      -Wall
      -O2
  if (!flag(development))
    ghc-options:
      -Werror
  build-depends:
      base
    , cardano-wallet-cli
    , cardano-wallet-core
    , cardano-wallet-shelley
    , cardano-wallet-launcher
    , filepath
    , iohk-monitoring
    , network
    , optparse-applicative
    , process
    , text
    , text-class
  hs-source-dirs:
      exe
  main-is:
      cardano-wallet-shelley.hs
